# tod

./: .commitlint.config.mjs  .cz.json  .gitignore  .rusty-hook.toml  .tool-versions  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  PUBLISH_CHECKLIST.md  README.md  SECURITY.md  anothertest.md  build.rs  codecov.yml  crearpr.md  create_pr.sh  dummy.md  gpg-key.txt  lint_string.sh  manual_test.sh  push_aur.sh  release.sh  rust-toolchain  rust-toolchain.toml  setup_aur.sh  test.sh  trigger.js  update_test.sh  watch.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request.yml
.github/workflows/: ci-pr.yml  ci-push.yml  ci.yml  ci_codecov.yml  ci_dependabot.yml  ci_tests.yml  commitlint.yml  dependabot_auto_merge.yml  pr_auto_release.yml  pr_check.yml  pr_codecov.yml  pr_commitlint.yml  pr_dependabot_merge.yml  pr_test.yml  pr_tests.yml  release.yaml  release.yml  release_auto.yaml  release_build_test.yml  release_cargo.yml  release_check.yml  release_homebrew.yaml  release_linux.yml  release_linux_cargo.yml  release_macos.yml  release_please.yml  release_publish.yml  release_upload.yml  release_windows.yml  reusable-build.yml  reusable-ci.yml  reusable-full-ci.yml  reusable-publish.yml  reusable-upload.yml  reusable-validate.yml
.github/workflows/Old Release/: release_cargo.yml  release_check.yml  release_windows.yml
.github/workflows/config/: commitlint.config.mjs
.github/workflows/reusable/: README.md  ci.yml  detect-changes.yml  full-ci.yml  quick-ci.yml
bucket/: tod.json
docs/: configuration.md  contributing.md  installation.md  motivation.md  usage.md
scripts/: auto_release.sh  create_pr.sh  lint_string.sh  manual_test.sh  push_aur.sh  release.sh  setup_aur.sh  test.sh  test_cfg_cleanup.sh  testcfg_clean.sh  update_test.sh
src/: cargo.rs  color.rs  comment.rs  comments.rs  config.rs  debug.rs  error.rs  errors.rs  filters.rs  id.rs  input.rs  items.rs  labels.rs  list.rs  lists.rs  main.rs  oauth.rs  params.rs  projects.rs  report.rs  request.rs  sections.rs  shell.rs  tasks.rs  test.rs  test_time.rs  time.rs  todoist.rs  update.rs  user.rs  users.rs  utils.rs
src/request/: next_item.rs
src/tasks/: format.rs  priority.rs
src/test/: fixtures.rs  responses.rs
src/todoist/: request.rs
test/: .tod.cfg
tests/: project_test_config  tod.cfg
tests/fixtures/: comments_all_types.json
tests/inputs/: import_tasks.txt
tests/responses/: AccessToken.json  Comment.json  CommentsAllTypes.json  Ids.json  Label.json  Labels.json  NewProjects.json  Project.json  Projects.json  Section.json  Sections.json  Task.json  TodayTask.json  TodayTasks.json  TodayTasksWithoutDuration.json  UnscheduledTasks.json  User.json  Versions.json
