[package]
name = "tod"
version = "0.5.13"
authors = ["Alan Vardy <alan@vardy.cc>"]
edition = "2021"
license = "MIT"
description = "A tiny unofficial Todoist client"
readme = "README.md"
homepage = "https://github.com/alanvardy/tod"
repository = "https://github.com/alanvardy/tod"
keywords = ["cli", "todoist", "client", "tasks", "todo"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
dirs = "5.0"
matches = "0.1.10"
regex = "1"
chrono = "0.4.38"
chrono-tz = "0.9.0"
colored = "2.1.0"
clap = { version = "4.5.4", features = ["derive"] }
spinners = "4.1.1"
inquire = { version = "0.7.5", features = ["date"] }
serde_repr = "0.1.19"
rand = "0.8.5"
rayon = "1.10.0"
pad = "0.1.6"
urlencoding = "2.1.3"
homedir = "0.2.1"

[dev-dependencies]
mockito = "1.4.0"
pretty_assertions = "1.4.0"
