[package]
name = "tod"
version = "0.7.6"
authors = ["Alan Vardy <alan@vardy.cc>"]
edition = "2024"
license = "MIT"
description = "A tiny unofficial Todoist client"
readme = "README.md"
homepage = "https://github.com/alanvardy/tod"
repository = "https://github.com/alanvardy/tod"
keywords = ["cli", "todoist", "client", "tasks", "todo"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.16", features = ["serde", "v4"] }
dirs = "6"
matches = "0.1.10"
regex = "1"
chrono = "0.4.41"
chrono-tz = "0.10.3"
colored = "3"
clap = { version = "4.5.38", features = ["derive"] }
spinners = "4.1.1"
inquire = { version = "0.7.5", features = ["date"] }
serde_repr = "0.1.20"
rand = "0.9"
rayon = "1.10.0"
pad = "0.1.6"
urlencoding = "2.1.3"
homedir = "0.3.4"
tokio = { version = "1.45.0", features = ["full"] }
futures = "0.3.31"
supports-hyperlinks = "3.1.0"
terminal_size = "0.4.2"
clap_complete = "4.5.50"
walkdir = "2.5.0"


[dev-dependencies]
mockito = "1.7.0"
pretty_assertions = "1.4.1"
