[package]
name = "tod"
version = "0.9.1"
authors = ["Alan Vardy <alan@vardy.cc>"]
edition = "2024"
license = "MIT"
description = "An unofficial Todoist command-line client"
readme = "README.md"
homepage = "https://github.com/alanvardy/tod"
repository = "https://github.com/alanvardy/tod"
keywords = ["cli", "todoist", "client", "tasks", "todo"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.22", features = ["json"] }
uuid = { version = "1.17", features = ["serde", "v4"] }
dirs = "6.0.0"
matches = "0.1.10"
regex = "1.11.1"
chrono = "0.4.41"
chrono-tz = "0.10.3"
colored = "3.0.0"
clap = { version = "4.5.40", features = ["derive"] }
spinners = "4.1.1"
inquire = { version = "0.7.5", features = ["date"] }
serde_repr = "0.1.20"
rand = "0.9.1"
rayon = "1.10.0"
pad = "0.1.6"
urlencoding = "2.1.3"
homedir = "0.3.6"
tokio = { version = "1.46.1", features = ["full"] }
futures = "0.3.31"
supports-hyperlinks = "3.1.0"
terminal_size = "0.4.2"
clap_complete = "4.5.54"
walkdir = "2.5.0"
once_cell = "1.21.3"
strum = { version = "0.27.1", features = ["strum_macros"] }
strum_macros = "0.27.1"
axum = "0.8.4"
serde_regex = "1.1.0"


[dev-dependencies]
assert_cmd = "2.0.17"
mockito = "1.7.0"
predicates = "3.1.3"
pretty_assertions = "1.4.1"

[build-dependencies]
chrono = "0.4.41"
